--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
 
     <!-- CV Button -->
-    <a href="Dharani_Devi_Resume.pdf" class="inline-block mt-6 bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded shadow transition">
+    <a href="./Dharani devi_resume updated.pdf" class="inline-block mt-6 bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded shadow transition">
       <i data-lucide="download" class="inline w-5 h-5 mr-2"></i> Download CV
     </a>
   </div>
@@ -64,7 +64,7 @@
           <i data-lucide="bar-chart" class="w-5 h-5 text-blue-400"></i>
           <h4 class="text-white font-semibold">Analytics & BI</h4>
         </div>
-        <p>Power BI, DAX, KPI Tracking, Excel</p>
+        <p>Power BI, DAX, Power Query, KPI Tracking, Excel, Data Visualizations, Dashboard Development</p>
       </div>
 
       <!-- Data Management -->
@@ -82,7 +82,7 @@
           <i data-lucide="code" class="w-5 h-5 text-blue-400"></i>
           <h4 class="text-white font-semibold">Programming</h4>
         </div>
-        <p>Python (Pandas, NumPy), JS, HTML, CSS</p>
+        <p>Python (Pandas, NLP), JS, HTML, CSS</p>
       </div>
 
       <!-- AI & Automation -->
@@ -100,7 +100,7 @@
           <i data-lucide="settings" class="w-5 h-5 text-blue-400"></i>
           <h4 class="text-white font-semibold">Tools & Platforms</h4>
         </div>
-        <p>ZDX, Nexthink, ServiceNow, Azure</p>
+        <p>ZDX, Nexthink, ServiceNow, Azure, Git, Jira, API Integration, Postman, VS Code</p>
       </div>
     </div>
   </div>
@@ -155,10 +155,12 @@
           <i data-lucide="radar" class="w-5 h-5 text-blue-400"></i> Cognix – Observability Center
         </h4>
         <ul class="list-disc text-gray-300 ml-5 mt-2 space-y-1">
-          <li>Unified insights from 500+ devices using Nexthink, Intune, and ServiceNow integrations.</li>
-          <li>Reduced mean time to resolution (MTTR) by 40% through incident triaging dashboards.</li>
-          <li>Delivered monthly reports improving SLA adherence and NOC decision speed by 30%.</li>
+          <li>Developed a unified dashboard by integrating data from Nexthink, ServiceNow, and CareAR.</li>
+          <li>Enabled real-time monitoring of end-user device health, service desk activity, and incident trends.</li>
+          <li>Automated performance alerts and root cause detection using and Power BI.</li>
+          <li>Empowered IT teams with proactive support capabilities, enhancing the digital employee experience.</li>
         </ul>
+
       </div>
 
       <!-- Workspace Experience -->
@@ -220,13 +222,14 @@
         <i data-lucide="mail" class="w-6 h-6 text-blue-400"></i> Contact Me
       </h3>
       <p>📧 <a href="mailto:dharaniayyavu@gmail.com" class="text-blue-400 hover:underline">dharaniayyavu@gmail.com</a></p>
-      <p>📱 <a href="tel:+971568562818" class="text-blue-400 hover:underline">+971-568562818</a></p>
+      <!-- <p>📱 <a href="tel:+971568562818" class="text-blue-400 hover:underline">+971-568562818</a></p> -->
       <p>🔗 
         <a href="https://linkedin.com/in/yourprofile" class="text-blue-400 hover:underline">LinkedIn</a> | 
         <a href="https://github.com/yourprofile" class="text-blue-400 hover:underline">GitHub</a>
       </p>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer class="bg-blue-600 text-white text-center py-3 text-sm">
